--- a/app/src/main/res/layout/activity_grad_layout.xml
+++ b/app/src/main/res/layout/activity_grad_layout.xml
@@ -16,5 +16,12 @@
         >
 
     </GridView>
+    <Button
+        android:id="@+id/grid_btn"
+        android:layout_below="@id/pay_grid_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="关闭App"
+        ></Button>
 
 </RelativeLayout>
