--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -174,6 +174,14 @@
             android:textAllCaps="false"
             android:onClick="onClick"
             />
+        <Button
+            android:id="@+id/btn19"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="一键退出App"
+            android:textAllCaps="false"
+            android:onClick="onClick"
+            />
     </LinearLayout>
 
 </ScrollView>
